--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,1 +1,7 @@
+<ui-appleftmenu></ui-appleftmenu>
+<ui-apprightmenu></ui-apprightmenu>
 <ui-appbar></ui-appbar>
+<ui-appbody>
+	<ui-applogin></ui-applogin>
+</ui-appbody>
+<ui-appfooter></ui-appfooter>
